# cld

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  prettyprinters.py
src/: Codegen.cpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  ParserClass.cpp  buildTree.cpp  input.c  main.cpp
src/CompilerCore/: CMakeLists.txt  Codegen.cpp  Codegen.hpp  ConstantEvaluator.cpp  ConstantEvaluator.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  Syntax.cpp  Syntax.hpp  buildTree.cpp
src/CompilerCore/C/: Codegen.cpp  Codegen.hpp  ConstantEvaluator.cpp  ConstantEvaluator.hpp  ErrorMessages.hpp  Expected.hpp  FailureReason.cpp  FailureReason.hpp  LanguageOptions.cpp  LanguageOptions.hpp  Lexer.cpp  Lexer.hpp  Limits.hpp  Message.cpp  Message.hpp  Parser.cpp  Parser.hpp  ParserDeclarations.cpp  ParserExpressions.cpp  ParserMessage.cpp  ParserMessage.hpp  ParserResult.hpp  ParserUtil.cpp  ParserUtil.hpp  Representations.cpp  Representations.hpp  ResultingType.cpp  ResultingType.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  SemanticUtil.hpp  Semantics.cpp  Semantics.hpp  SourceInterface.hpp  SourceObject.cpp  SourceObject.hpp  Syntax.cpp  Syntax.hpp
src/CompilerCore/Common/: CMakeLists.txt  Expected.hpp  FailureReason.hpp  Text.cpp  Text.hpp  UniqueResource.hpp  Util.hpp
src/CompilerCore/Preprocessor/: Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  Syntax.cpp  Syntax.hpp
src/Frontend/: CMakeLists.txt
src/Frontend/Common/: CMakeLists.txt  Expected.hpp  Filesystem.hpp  ScopeExit.hpp  Text.cpp  Text.hpp  Util.cpp  Util.hpp
src/Frontend/Compiler/: ConstValue.cpp  ConstValue.hpp  ConstantEvaluator.cpp  ConstantEvaluator.hpp  CustomDiag.hpp  Diagnostic.cpp  Diagnostic.h  Diagnostic.hpp  ErrorMessages.hpp  LanguageOptions.cpp  LanguageOptions.hpp  Lexer.cpp  Lexer.hpp  Message.cpp  Message.hpp  Parser.cpp  Parser.hpp  ParserDeclarations.cpp  ParserExpressions.cpp  ParserUtil.cpp  ParserUtil.hpp  Program.cpp  ProgramInterface.cpp  ProgramInterface.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  SemanticAnalysisExpressions.cpp  SemanticAnalysisStatements.cpp  SemanticAnalysisTypes.cpp  SemanticUtil.hpp  Semantics.cpp  Semantics.hpp  SourceInterface.hpp  SourceObject.hpp  Syntax.cpp  Syntax.hpp
src/Frontend/Preprocessor/: Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  Syntax.hpp
src/Fuzzer/: CMakeLists.txt  Dictionary.txt  Lexems.txt  PPDictionary.txt  lexerFuzzer.cpp  parserFuzzer.cpp  ppLexerFuzzer.cpp  ppParserFuzzer.cpp
src/LLVMBackend/: Codegen.cpp  Codegen.hpp
src/Tests/: CMakeLists.txt  LinuxLexerTest.cpp  TestConfig.cpp  TestConfig.hpp  TestTargets.hpp  catch.hpp  constantevaluator.cpp  csmithRunner.cpp  diagnostics.cpp  fuzzerCrashRunner.cpp  fuzzerCrashes.cpp  lexer.cpp  main.cpp  messages.cpp  parser.cpp  preprocessor.cpp  preprocessor_parser.cpp  semantics.cpp
src/Tests/Frontend/: CMakeLists.txt  TestConfig.hpp  constantevaluator.cpp  csmithRunner.cpp  diagnostics.cpp  fuzzerCrashRunner.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  preprocessor_parser.cpp  semantics.cpp
src/Tests/LLVMBackend/: Common.cpp  Common.hpp  codegentests.cpp
src/Tests/Resources/: TestInclude.h
src/cld/: cldmain.cpp  cldmain.hpp  main.cpp
src/cld/Common/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Constexpr.hpp  Expected.hpp  MonadicInheritance.h  Triple.cpp  Triple.hpp  Util.hpp  (+2 more)
src/cld/Frontend/: CMakeLists.txt
src/cld/Frontend/Compiler/: Attributes.hpp  Builtins.def  ConstValue.cpp  ConstValue.hpp  CustomDiag.hpp  Diagnostic.cpp  Diagnostic.hpp  DiagnosticUtil.hpp  ErrorMessages.hpp  LanguageOptions.cpp  LanguageOptions.hpp  Lexer.cpp  Lexer.hpp  Message.cpp  Message.hpp  Parser.cpp  Parser.hpp  ParserDeclarations.cpp  ParserExpressions.cpp  ParserUtil.cpp  ParserUtil.hpp  Program.hpp  ProgramInterface.cpp  ProgramInterface.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  SemanticAnalysisAttributes.cpp  SemanticAnalysisBuiltins.cpp  SemanticAnalysisDecl.cpp  SemanticAnalysisExpressions.cpp  SemanticAnalysisStatements.cpp  SemanticAnalysisTypes.cpp  SemanticUtil.hpp  Semantics.cpp  Semantics.hpp  SourceInterface.hpp  SourceObject.hpp  Syntax.cpp  Syntax.hpp
src/cld/Frontend/Compiler/Targets/: X86Features.def  X86TargetFeatures.cpp  X86TargetFeatures.hpp
src/cld/Frontend/Preprocessor/: Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  Syntax.hpp
src/cld/LLVMBackend/: ABIImplementation.cpp  ABIImplementation.hpp  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorDecl.cpp  CodeGeneratorExpr.cpp  CodeGeneratorStatement.cpp  Codegen.cpp  Codegen.hpp  CommonABIImpl.hpp  TypeIdentity.hpp  WinX64ABI.cpp  WinX64ABI.hpp  X64ABI.cpp  X64ABI.hpp
src/cld/Support/: AbstractIntrusiveVariant.h  AbstractIntrusiveVariant.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Constexpr.hpp  Filesystem.cpp  Filesystem.hpp  InstrusiveVariantStorage.hpp  IntrVarAllocator.hpp  IntrVarValue.hpp  IntrusiveVariantAllocator.hpp  MaxVector.hpp  MonadicInheritance.h  MonadicStorage.hpp  Text.cpp  Text.hpp  Triple.cpp  Triple.hpp  Util.hpp  ValueReset.h
src/cld/Tests/: CMakeLists.txt  Catch.cmake  CatchAddTests.cmake  TestConfig.cpp  TestConfig.hpp  TestTargets.hpp  catch.hpp
src/cld/Tests/Frontend/: CMakeLists.txt  TestConfig.cpp  TestConfig.hpp  commandline.cpp  constantevaluator.cpp  constantevaluator_tests.cpp  csmithRunner.cpp  diagnostics.cpp  diagnostics_tests.cpp  fuzzerCrashRunner.cpp  lexer.cpp  lexer_tests.cpp  main.cpp  parser.cpp  parser_tests.cpp  preprocessor.cpp  preprocessor_parser.cpp  preprocessor_parser_tests.cpp  preprocessor_tests.cpp  semantics.cpp  semantics_tests.cpp
src/cld/Tests/LLVMBackend/: CMakeLists.txt  Common.cpp  Common.hpp  codegenCrashRunner.cpp  codegen_tests.cpp  codegentests.cpp  main.cpp
src/cld/Tests/Support/: CMakeLists.txt  intrusivevariantallocator_tests.cpp  intrusivevariantvalue_tests.cpp  main.cpp
src/cld/Tests/cldMain/: CMakeLists.txt  cldMain_tests.cpp  commandline.cpp  commandline_tests.cpp  main.cpp
(+10 files in other folders)
